--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,15 +5,38 @@ on:
     types: [ opened, synchronize ]
 
 jobs:
-  test:
+# -------------------------------------------------
+  detect-changes:
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    outputs:
+      has-changes: ${{ steps.changed.outputs.any_changed }}
 
     steps:
       - name: Checkout Repository
         timeout-minutes: 1
         uses: actions/checkout@v4
 
+      - name: Detect Changes
+        id: changed
+        timeout-minutes: 1
+        uses: tj-actions/changed-files@v46
+        with:
+          files: |
+            Production/**
+            Features/**
+
+
+# -------------------------------------------------
+  test:
+    runs-on: ubuntu-latest
+    needs: detect-changes
+    if: needs.detect-changes.outputs.has-changes == 'true'
+    timeout-minutes: 5
+    outputs:
+      merge_ok: ${{ steps.ok.outputs.merge_ok }}
+
+    steps:
       - name: Setup Python
         timeout-minutes: 1
         uses: actions/setup-python@v4
@@ -22,5 +45,48 @@ jobs:
 
       - name: Run Test
         timeout-minutes: 1
-        run: |
-          echo "Test ran successfully."
+        run: echo "Test ran successfully."
+
+      - name: Set Merge Ok
+        id: ok
+        timeout-minutes: 1
+        run: echo "merge_ok=true" >> "$GITHUB_OUTPUT"
+
+
+# -------------------------------------------------
+  no-test-needed:
+    runs-on: ubuntu-latest
+    needs: detect-changes
+    if: needs.detect-changes.outputs.has-changes == 'false'
+    timeout-minutes: 5
+    outputs:
+      merge_ok: ${{ steps.ok.outputs.merge_ok }}
+
+    steps:
+      - name: Setup Python
+        timeout-minutes: 1
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - name: No Test Needed
+        timeout-minutes: 1
+        run: echo "No relevant changes found. No test needed. Proceeding with success."
+
+      - name: Set Merge Ok
+        id: ok
+        timeout-minutes: 1
+        run: echo "merge_ok=true" >> "$GITHUB_OUTPUT"
+
+
+# -------------------------------------------------
+  merge-ok:
+    runs-on: ubuntu-latest
+    needs: [ test, no-test-needed ]
+    if: needs.test.outputs.merge_ok == 'true' || needs.no-test-needed.outputs.merge_ok == 'true'
+    timeout-minutes: 5
+
+    steps:
+      - name: Merge Ok
+        timeout-minutes: 1
+        run: echo "OK"
