--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,9 +40,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
-
-      - name: Run Test
-        timeout-minutes: 1
         run: echo "Test ran successfully."
 
 
@@ -59,9 +56,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
-
-      - name: No Test Needed
-        timeout-minutes: 1
         run: echo "No relevant changes found. No test needed. Proceeding with success."
 
 
@@ -69,9 +63,18 @@ jobs:
   merge-ok:
     runs-on: ubuntu-latest
     needs: [ test, no-test-needed ]
+    if: ${{ always() }}
     timeout-minutes: 5
 
     steps:
-      - name: Merge Ok
+      - name: Decide Result
         timeout-minutes: 1
-        run: echo "OK"
+        run: |
+          echo "test result: ${{ needs.test.result }}"
+          echo "no-test-needed result: ${{ needs['no-test-needed'].result }}"
+          if [[ "${{ needs.test.result }}" == "success" || "${{ needs['no-test-needed'].result }}" == "success" ]]; then
+            echo "OK"
+          else
+            echo "Required jobs did not succeed." >&2
+            exit 1
+          fi
