--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,21 +66,21 @@ jobs:
 
 
 # -------------------------------------------------
-  merge-ok:
-    runs-on: ubuntu-latest
-    needs: [ test, no-test-needed ]
-    if: ${{ always() }}
-    timeout-minutes: 5
+  # merge-ok:
+  #   runs-on: ubuntu-latest
+  #   needs: [ test, no-test-needed ]
+  #   if: ${{ always() }}
+  #   timeout-minutes: 5
 
-    steps:
-      - name: Decide Result
-        timeout-minutes: 1
-        run: |
-          echo "test result: ${{ needs.test.result }}"
-          echo "no-test-needed result: ${{ needs['no-test-needed'].result }}"
-          if [[ "${{ needs.test.result }}" == "success" || "${{ needs['no-test-needed'].result }}" == "success" ]]; then
-            echo "OK"
-          else
-            echo "Required jobs did not succeed." >&2
-            exit 1
-          fi
+  #   steps:
+  #     - name: Decide Result
+  #       timeout-minutes: 1
+  #       run: |
+  #         echo "test result: ${{ needs.test.result }}"
+  #         echo "no-test-needed result: ${{ needs['no-test-needed'].result }}"
+  #         if [[ "${{ needs.test.result }}" == "success" || "${{ needs['no-test-needed'].result }}" == "success" ]]; then
+  #           echo "OK"
+  #         else
+  #           echo "Required jobs did not succeed." >&2
+  #           exit 1
+  #         fi
