--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,10 @@ jobs:
 
       - name: Run Test
         timeout-minutes: 1
-        run: echo "Test ran successfully."
+        # run: echo "Test ran successfully."
+        run: |
+          echo "This test will fail."
+          exit 1
 
 
 # -------------------------------------------------
